--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-datepicker": "^7.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.1",
     "recoil": "^0.7.7",
     "swiper": "6.8.4",
     "tailwindcss": "^3.4.13"
