--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "kakao.maps.d.ts": "^0.1.40",
     "postcss": "^8.4.47",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
