--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.1",
     "recoil": "^0.7.7",
-    "swiper": "6.8.4",
+    "swiper": "^6.8.4",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
