--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-hook-geolocation": "^1.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.1",
