--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.1.0",
     "react-hook-geolocation": "^1.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
