feat: 유저 정보 api 연결+api파일 추가

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-cookie": "^7.2.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.1.0",
