feat: Home과 BoardList 게시글 UI 통일
- Post, PostList 컴포넌트를 활용하여 게시글 표시 방식 통일
- 데이터 구조 변경 (author -> nickname, university)
- 게시글 렌더링 로직을 PostList 컴포넌트로 변경
- 스타일링 일관성 개선

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@types/react-datepicker": "^7.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-cookie": "^7.2.1",
-    "react-datepicker": "^7.4.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.1.0",
     "react-hook-geolocation": "^1.1.0",
