--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-datepicker": "^7.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
