--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
     "@types/react-datepicker": "^7.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
