--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.59.16",
     "@types/react-datepicker": "^7.0.0",
     "autoprefixer": "^10.4.20",
