--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.1",
+    "react-toastify": "^10.0.6",
     "recoil": "^0.7.7",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.13"
